feat(notification): [BH-149] implement mark as read and notification state management